--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -2,17 +2,17 @@
     <mat-card-title>Novo Produto</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Nome">
+            <input matInput placeholder="Nome" [(ngModel)]="product.name" name="name">
         </mat-form-field>
         <mat-form-field>
-            <input matInput placeholder="Preço (R$)">
+            <input matInput placeholder="Preço (R$)" [(ngModel)]="product.price" name="price">
         </mat-form-field>
     </form>
-</mat-card>
-<button mat-raised-button (click)="createProduct()" color="primary">
-    Salvar
-</button>
+    <button mat-raised-button (click)="createProduct()" color="primary">
+        Salvar
+    </button>
 
-<button mat-raised-button (click)="cancel()">
-    Cancelar
-</button>
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button>
+</mat-card>
